FEAT: Name on-premise engine jar as an automatic module
JEP 472 checks JNI method binding against the module declaring the native methods, which is this package rather than pipeline.engines.fiftyone, so both names are needed. Documents granting native access on the classpath and the module path.

Implements #476.