@@ -157,28 +157,47 @@ and also add a transitive dependency these jars need (would have been added by M
 ```
 ## Native library access
 
-On-premise device detection loads a native library through `System.load`, which recent
-JDKs treat as a restricted method and will eventually block
-(see [JEP 472](https://openjdk.org/jeps/472)). The load is performed by `LibLoader` in
-`pipeline.engines.fiftyone`, so the permission is granted against that package.
+On-premise device detection uses a native library, and
+[JEP 472](https://openjdk.org/jeps/472) restricts two things it needs: calling
+`System.load`, and binding a JNI `native` method declaration to its implementation.
+Java 24 and 25 warn once per calling module, and a later release will refuse the call
+and throw `IllegalCallerException`.
 
-If the 51Degrees JARs are on the **classpath** (the usual setup):
+The two operations happen in **different** packages:
+
+| Restricted operation | Declared in | Module name |
+|---|---|---|
+| `System.load` | `pipeline.engines.fiftyone` | `fiftyone.pipeline.engines.fiftyone` |
+| JNI `native` methods | `device-detection.hash.engine.on-premise` | `fiftyone.devicedetection.hash.engine.onpremise` |
+
+### On the classpath
+
+This is the default layout and needs no changes to how you package or deploy. One flag
+covers both operations:
 
 ```bash
 java -cp "libs/*" --enable-native-access=ALL-UNNAMED com.example.Main
 ```
 
-If the pipeline JARs are on the **module path**, you can grant native access to
-51Degrees code alone instead of to everything unnamed:
+### Naming 51Degrees code alone
+
+If granting native access to every jar on the classpath is too broad, move those two
+jars - and only those two - onto the module path, leaving your application and every
+other dependency on the classpath:
 
 ```bash
-java --module-path libs --enable-native-access=fiftyone.pipeline.engines.fiftyone -m your.app/com.example.Main
+java -cp "libs/*" --module-path "mods/*" --add-modules fiftyone.pipeline.engines.fiftyone,fiftyone.devicedetection.hash.engine.onpremise --enable-native-access=fiftyone.pipeline.engines.fiftyone,fiftyone.devicedetection.hash.engine.onpremise com.example.Main
 ```
 
-The device detection packages themselves are not named modules and need no changes -
-unnamed modules can read named ones. See the
-[pipeline-java README](https://github.com/51Degrees/pipeline-java#java-modules-and-native-library-access)
-for the full list of module names and the caveats that apply on the module path.
+A jar must not appear on both paths, so keep the two module path jars in a separate
+directory from the classpath ones.
+
+Both names come from an `Automatic-Module-Name` manifest entry, so the jars remain
+ordinary non-modular jars and nothing changes for consumers who stay on the classpath.
+See the
+[pipeline-java README](https://github.com/51Degrees/pipeline-java#native-library-access)
+for the other 51Degrees module names and for how to configure element builders when a
+jar is on the module path.
 
 ## Examples
 
